--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "classnames": "^2.2.6",
-    "jquery": "^3.3.1",
-    "prop-types": "^15.6.2",
-    "qs": "^6.5.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "@rive-app/react-canvas": "^4.13.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.11.3",
+    "react-query": "^3.39.3",
+    "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "5.0.1"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
